package org.example.padroescriacao.abstractfactory;

public interface IOrcamento {
    String gerar();
}
