package org.example.padroescriacao.abstractfactory;

public interface IOrdemServico {
    String emitir();
}
